--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/community.css">
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
@@ -25,6 +26,9 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
+                <li th:if="${session.user != null}">
+                    <a href="/publish">发布</a>
+                </li>
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -40,13 +44,47 @@
             </ul>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-9 col-md-12 col-ms-12 col-xs-12" style="background-color: rebeccapurple" th:height="200px"></div>
-            <div class="col-lg-3 col-md-12 col-ms-12 col-xs-12" style="background-color: #1b6d85" th:height="200px" ></div>
+</nav>
+    <div class="container-fluid main">
+            <div class="row">
+            <!--左边-->
+            <div class="col-lg-9 col-md-12 col-ms-12 col-xs-12">
+                <h2><span class="glyphicon-backward glyphicon-plus" aria-hidden="true"></span>发起</h2>
+                <hr>
+                <form action="/publish" method="post">
+                    <div class="form-group">
+                        <label for="title">问题标题(简单扼要)：</label>
+                        <input type="text" th:value="${title}" class="form-control" id="title" name="title" placeholder="问题标题...">
+                    </div>
+                    <div class="form-group">
+                        <label for="title">问题补充(必填，请参照右侧提示)：</label>
+                       <textarea name="description" th:value="${description}" class="form-control" id="description" cols="30" rows="10"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="title">添加标签：</label>
+                        <input type="text" th:value="${tags}" class="form-control" name="tags" id="tags"  placeholder="输入标签，以逗号分隔">
+                    </div>
 
+                    <div class="container-fluid main">
+                        <div class="row">
+                            <div class="alert alert-danger col-lg-9 col-md-12 col-ms-12 col-xs-12" th:text="${error}" th:if="${error} != null"></div>
+                            <div class="col-lg-3 col-md-12 col-ms-12 col-xs-12">
+                            <button type="submit" class="btn btn-success btn-publish col-lg-3 col-md-12 col-ms-12 col-xs-12">发布</button>
+                            </div>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+
+            <!--右边-->
+            <div class="col-lg-3 col-md-12 col-ms-12 col-xs-12">
+                <h3>问题发起指南 </h3>
+                • 问题标题: 请用精简的语言描述您发布的问题，不超过25字<br>
+                • 问题补充: 详细补充您的问题内容，并确保问题描述清晰直观, 并提供一些相关的资料：<br>
+                • 选择标签: 选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字。<br>
+            </div>
         </div>
     </div>
-</nav>
 </body>
 </html>
