--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
         <div class="col-lg-9 col-md-12 col-ms-12 col-xs-12">
             <h3><span class="glyphicon glyphicon-list" aria-hidden="true"></span>  发现  </h3>
             <hr>
-            <div class="media" th:each="question : ${questionDtoList}">
+            <div class="media" th:each="question : ${pageDto.questionDtosList}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-circle" th:src="${question.user.avatarUrl}">
@@ -68,6 +68,34 @@
                         </span>
                 </div>
             </div>
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+                    <li th:if="${pageDto.isShowFirstPage()}">
+                        <a th:href="@{/(pageNum=1)}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;&lt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pageDto.isShowPrevious()}">
+                        <a th:href="@{/(pageNum=${pageDto.pageNum} - 1)}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                        </a>
+                    </li>
+                    <li   th:class="${pageDto.pageNum == page}? 'active' : ''" th:each="page : ${pageDto.pages}">
+                        <a th:href="@{/(pageNum=${page})}" th:text="${page}"/>
+                    </li>
+                    <li th:if="${pageDto.isShowNext()}">
+                        <a th:href="@{/(pageNum=${pageDto.pageNum} + 1)}" aria-label="Next">
+                            <span aria-hidden="true">&gt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pageDto.isShowEndPage()}">
+                        <a th:href="@{/(pageNum=${pageDto.totalPage})}" aria-label="Next">
+                            <span aria-hidden="true">&gt;&gt;</span>
+                        </a>
+                    </li>
+
+                </ul>
+            </nav>
         </div>
 
         <!--右边 ： 热门话题-->
