--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,22 +1,22 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>麻将社区</title>
+    <title th:text="${sectionName}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/community.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/community.css">
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
 
-<div class="container-fluid main">
+<div class="container-fluid main profile">
     <div class="row">
         <!--左边-->
         <div class="col-lg-9 col-md-12 col-ms-12 col-xs-12">
-            <h3><span class="glyphicon glyphicon-list" aria-hidden="true"></span>  发现  </h3>
+            <h3><span th:text="${sectionName}"></span> </h3>
             <hr>
             <div class="media" th:each="question : ${pageDto.questionDtosList}">
                 <div class="media-left">
@@ -26,7 +26,6 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading" th:text="${question.title}"></h4>
-                    <span th:text="${question.description}"></span> <br>
                     <span class="text-desc">
                     •<span th:text="${question.commandCount}"></span> 个回复
                         • <span th:text="${question.viewCount}"></span> 次浏览
@@ -66,7 +65,13 @@
 
         <!--右边 ： 热门话题-->
         <div class="col-lg-3 col-md-12 col-ms-12 col-xs-12">
-            <h3>热门话题</h3>
+            <div class="list-group section">
+                <a href="/profile/questions" th:class="${section} == 'questions' ? 'active list-group-item' : 'list-group-item'">我的问题</a>
+                <a href="/profile/replies" class="list-group-item" th:class="${section} == 'replies' ? 'active list-group-item' : 'list-group-item'">最新回复
+                    <span class="badge">14</span>
+                </a>
+            </div>
+
         </div>
     </div>
 </div>
